# vca-flow

./: .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: ci.yml
src/: __init__.py  agents.py  business_rules.py  chain.py  download_sec_voluntary_filings.py  prompts.py  schema.py  tools.py
tests/: __init__.py  conftest.py
tests/integration/: test_chain_integration.py  test_tools_integration.py
tests/unit/: test_business_rules.py  test_prompts.py  test_schema.py  test_tools.py
