[project]
name = "vca-flow"
version = "0.1.0"
description = "Voluntary Corporate Action Flow — extract voluntary corporate actions from SEC EDGAR filings"
requires-python = ">=3.11"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = []

# E402 (module-import-not-at-top-of-file) is expected — several scripts
# manipulate sys.path before importing from src/ so they can be run
# directly as `python src/chain.py` or `python main.py`.
[tool.ruff.lint.per-file-ignores]
"main.py" = ["E402"]
"src/chain.py" = ["E402"]
"tests/**/*.py" = ["E402"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.pytest.ini_options]
testpaths = ["tests/"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
markers = [
    "unit: Unit tests (fast, no network/disk dependencies)",
    "integration: Integration tests (require real SEC filings on disk)",
]
# Default: only run unit tests (add -m integration to run integration tests)
addopts = ["-m", "unit", "--strict-markers", "-v"]
